# Metropt

./: README.md  main.py  pyproject.toml
docs/: Metropt.md
src/: cost.py  grid.py  main.py  optimizer.py  stochastics.py  transit.py
src/notebooks/: información_base_modelo_de_prescriptiva.ipynb
