[project]
name = "metropt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
]
